--- a/index.html
+++ b/index.html
@@ -96,56 +96,7 @@
     <main class="container text-center">
       <h1 style="margin: 1rem 0">Productos</h1>
 
-      <div class="row">
-        <!-- <div class="col-sm-12 col-lg-4 col-sm-6" style="margin-bottom: 1rem">
-          <div class="card" style="border-radius: 15px">
-            <div
-              class="bg-image hover-overlay ripple ripple-surface ripple-surface-light"
-              data-mdb-ripple-color="light"
-            >
-              <img
-                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/12.webp"
-                style="
-                  border-top-left-radius: 15px;
-                  border-top-right-radius: 15px;
-                "
-                class="img-fluid"
-                alt="Laptop"
-              />
-              <a href="#!">
-                <div class="mask"></div>
-              </a>
-            </div>
-            <div class="card-body pb-0">
-              <div class="d-flex justify-content-between">
-                <div>
-                  <p>
-                    <a href="#!" class="text-dark">Nombre del producto</a>
-                  </p>
-                  <p class="small text-muted">Categoria</p>
-                </div>
-              </div>
-            </div>
-            <hr class="my-0" />
-            <div class="card-body pb-0">
-              <div class="d-flex justify-content-between">
-                <p><a href="#!" class="text-dark">$3,999</a></p>
-                <p class="text-dark">Descuento</p>
-              </div>
-            </div>
-            <hr class="my-0" />
-            <div class="card-body">
-              <div
-                class="d-flex justify-content-between align-items-center pb-2 mb-1"
-              >
-                <button type="button" class="btn btn-primary">
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
+      <div class="row"></div>
     </main>
     <script src="./script.js"></script>
   </body>
