--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
           <form class="d-flex" role="search">
             <input
               class="form-control me-2"
-              type="search"
               placeholder="Buscar producto"
               aria-label="Search"
               id="searchBox"
             />
             <button
               class="btn btn-outline-success"
-              type="submit"
               id="searchButton"
+              type="button"
               onclick="handleSearchBox()"
             >
               Buscar
